# 202a_project

./: README.md
data/: README.md
data/ei_clusters/: alpha.sample0.csv  alpha.sample1.csv  alpha.sample10.csv  alpha.sample100.csv  alpha.sample101.csv  alpha.sample102.csv  alpha.sample103.csv  alpha.sample104.csv  alpha.sample105.csv  alpha.sample106.csv  alpha.sample107.csv  alpha.sample108.csv  alpha.sample109.csv  alpha.sample11.csv  alpha.sample110.csv  alpha.sample111.csv  alpha.sample112.csv  alpha.sample113.csv  alpha.sample114.csv  alpha.sample115.csv  alpha.sample116.csv  alpha.sample117.csv  alpha.sample118.csv  alpha.sample119.csv  alpha.sample12.csv  alpha.sample13.csv  alpha.sample14.csv  alpha.sample15.csv  alpha.sample16.csv  alpha.sample17.csv  alpha.sample18.csv  alpha.sample19.csv  alpha.sample2.csv  alpha.sample20.csv  alpha.sample21.csv  alpha.sample22.csv  alpha.sample23.csv  alpha.sample24.csv  alpha.sample25.csv  alpha.sample26.csv  (+798 more)
docs/: _config.yml  description.html  index.html  index.md  proposal.md  report.md
embedded/: README.md
embedded/main/: .main.cpp.swp
embedded/model-parameters/: model_metadata.h  model_variables.h
embedded/tflite-model/: trained_model_compiled.cpp
python/: data_collection.py
software/: README.md  requirements.txt
software/arduino/: README.md
software/embedded/: CMakeLists.txt  README.md
software/embedded/main/: CMakeLists.txt  main.cpp
software/embedded/model-parameters/: dsp_blocks.h
software/embedded/tflite-model/: trained_model_compiled.h
software/python_model/: README.md  (+2 more)
(+10 files in other folders)
